# pocket-traffic-lawyer

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  deps.py  main.py  schemas.py
backend/app/core/: embed.py  generator.py  indexer.py  permissions.py  rag.py  rerank.py  security.py  utils.py
backend/app/data/dataset_samples/: traffic_law_sample.csv
backend/app/data/index/: .gitkeep
backend/app/models/: .gitkeep  chat_history.py  init.py  refresh_token.py  user.py
backend/app/routers/: admin.py  auth.py  chat.py  stt.py  tts.py
backend/app/tests/: test_chat.py  test_indexer.py
backend/backend/app/data/index/: documents.pkl  index.faiss  metadata.pkl
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AdminPanel.tsx  AudioPlayer.tsx  CategoryBadge.tsx  Chat.tsx  ConfidenceMeter.tsx  Footer.tsx  Header.tsx  KeyboardShortcuts.tsx  Message.tsx  MicButton.tsx  ScrollToBottom.tsx  SourceCard.tsx  SuggestedQuestions.tsx  ThemeToggle.tsx  TypingIndicator.tsx  UserMenu.tsx
frontend/src/components/ui/: progress.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  auth.ts  hooks.ts  types.ts
frontend/src/styles/: globals.css
frontend/tests/: chat.spec.ts
scripts/: build_index.py  run_dev.sh  run_prod.sh
